<resources>
    <string name="app_name">"Quick Cash"</string>
    <string name="google_maps_key">AIzaSyCAiA83za_0T-7lvyfx2f4dIf2txG4ZNpI</string>

        <string-array name="role">
            <item>Employee</item>
            <item>Employer</item>
        </string-array>

        <string-array name="category">
            <item>Teaching</item>
            <item>Computer Repair</item>
            <item>Baby Sitter</item>
            <item>Pet Walker</item>
            <item>Hair Dresser</item>
            <item>Grocery Delivery</item>
            <item>Car Maintenance</item>
            <item>Home Maker</item>
        </string-array>

        <string name="nav_open">Open</string>
        <string name="nav_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="create_job">Create Job</string>
    <string name="enter_job_description">Enter Job Description</string>
    <string name="title">Title</string>
    <string name="locationStr">Location</string>
    <string name="payment">Payment</string>
    <string name="duration">Duration</string>
    <string name="category">Category</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome Back,</string>
    <string name="job_title">Job Title</string>
    <string name="status">Status</string>
    <string name="job_description">Job Description</string>
    <string name="view_job_details">View job details</string>
    <string name="minimum_payment">Minimum Payment</string>
    <string name="minimum_hours">Minimum Hours</string>
    <string name="job_category">Job category</string>
    <string name="employer">Employer</string>
    <string name="employer_name">Employer name</string>
    <string name="job_preference">Job Preference</string>
    <string name="job_search">Job search</string>
    <string name="search_for_jobs">Search for jobs</string>
    <string name="search_button">Search</string>
    <string name="search_by_preference">Search by preference</string>
    <string name="job_status">Job Status</string>
    <string name="view_job_offer">View job offer</string>
    <string name="waiting">Waiting</string>
    <string name="current_status">Current Status</string>
    <string name="login">Login</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="your_email">Your Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot password?</string>
    <string name="i_donot_have_an_account">I don\'t have an account</string>
    <string name="log_in">LogIn</string>
    <string name="pay_employee">Pay Employee</string>
    <string name="view_job_offer_and_pay">View job offer and pay</string>
    <string name="selected_employee">Selected Employee</string>
    <string name="pay">Pay</string>
    <string name="account_recovery">Account Recovery</string>
    <string name="enter_your_recovery_email">Enter your recovery email</string>
    <string name="back_to_login">Back to login</string>
    <string name="send">Send</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="select_employee">Select employee</string>
    <string name="accept_or_reject_employee">Accept or reject employee</string>
    <string name="applicants">Applicants</string>
    <string name="name">Name</string>
    <string name="accept">Accept</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="enter_feedback">Enter Feedback</string>
    <string name="logout">Logout</string>
    <string name="user_type">User Type</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate Us</string>
    <string name="register">Register</string>
    <string name="create_your_account">Create your account</string>
    <string name="your_name">Your Name</string>
    <string name="select_your_role">Select Your Role</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="cancel">Cancel</string>
    <string name="employee_name">Employee Name</string>

</resources>