<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="94dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="250dp"
                    android:baselineAligned="false"
                    android:gravity="right"
                    app:srcCompat="@drawable/quick_cash_icon" />

            </RelativeLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay_employee"
                android:textColor="#000000"
                android:textSize="34sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="130dp" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_job_offer_and_pay"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="130dp" />

            <TextView
                android:id="@+id/jobTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/job_title"
                android:textAppearance="@style/TextAppearance.MediaRouter.Dynamic.Body.Light"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="206dp" />


            <TextView
                android:id="@+id/locationLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/locationStr"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="206dp"
                android:drawableStart="@drawable/location"/>


            <TextView
                android:id="@+id/payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/minimum_payment"
                android:textSize="16sp"
                android:drawableStart="@drawable/dollar"/>

            <TextView
                android:id="@+id/hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/minimum_hours"
                android:textSize="16sp"
                android:drawableStart="@drawable/clock"/>


            <TextView
                android:id="@+id/categoryLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/job_category"
                android:textSize="16sp"
                android:drawableStart="@drawable/category"/>

            <TextView
                android:id="@+id/employer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/selected_employee"
                android:textAppearance="@style/TextAppearance.MediaRouter.Dynamic.Body.Light"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="206dp" />

            <TextView
                android:id="@+id/employerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/selected_employee"
                android:textSize="16sp" />



            <Button
                android:layout_height="60dp"
                android:layout_width="match_parent"
                android:id="@+id/apply"
                android:text="@string/pay"
                android:layout_margin="5dp"
                android:radius="30dp"
                android:layout_weight="1"
                />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
