<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/scrollView2">


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="127dp"
                    android:layout_height="126dp"
                    android:layout_marginLeft="250dp"
                    android:baselineAligned="false"
                    android:gravity="right"
                    app:srcCompat="@drawable/quick_cash_icon" />

            </RelativeLayout>

      

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.5"
                    android:text="Select employee"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent" />





            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/title2"
                tools:layout_editor_absoluteY="130dp"
                android:textSize="16sp"
                android:textColor="#788190"
                android:text="Accept or reject employee"
                android:layout_marginBottom="60dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.5"
                    android:text="@string/applicants"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/refresh_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="@drawable/refresh_button">

                </Button>
            </LinearLayout>

            <TableLayout
                :tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity"
                android:stretchColumns="1,2"
                android:layout_margin="8dp">

                <TableRow>

                    <TextView
                        android:layout_width="172dp"
                        android:layout_column="1"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="@string/name"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:background="@drawable/rectangle_background"/>

                    <TextView
                        android:text="@string/accept"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="left"
                        android:layout_column="2"
                        android:background="@drawable/rectangle_background" />

                </TableRow>

                <FrameLayout
                    android:id="@+id/selectEmployeeRecycle"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                </FrameLayout>
            </TableLayout>



            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/logout"
                android:gravity="center"
                android:textColor="@android:color/holo_red_light"
                android:text="@string/logout"
                android:insetTop="100dp"
                android:layout_margin="10dp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:layout_height="60dp"
                android:layout_width="match_parent"
                android:id="@+id/loginButton"
                android:text="@string/submit"
                android:layout_margin="5dp"
                android:radius="30dp"
                android:layout_weight="1"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>