<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="127dp"
                    android:layout_height="126dp"
                    android:layout_marginStart="250dp"
                    android:baselineAligned="false"
                    android:gravity="right"
                    app:srcCompat="@drawable/quick_cash_icon" />

            </RelativeLayout>


            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="130dp"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#000000"
                android:text="Job Preference"
                android:id="@+id/title"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="130dp"
                android:textSize="16sp"
                android:textColor="#788190"
                android:text="@string/job_description" />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="206dp" />

            <Spinner
                android:layout_width="match_parent"
                android:theme="@style/SpinnerScrollBar"
                android:layout_height="wrap_content"
                android:id="@+id/jobCategory"
                android:layout_margin="15dp"
                android:entries="@array/category"/>


            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/locationStr"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="206dp" />


            <EditText
                android:id="@+id/editTextLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_text"
                android:textColor="@color/black"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/location"
                android:padding="15dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/minimum_payment"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextMinPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_text"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/dollar"
                android:padding="15dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/confirmPasswordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/minimum_hours"
                android:textColor="@color/black"

                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextMinHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_text"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/clock"
                android:padding="15dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />


            <Button
                android:layout_height="60dp"
                android:layout_width="match_parent"
                android:id="@+id/submit"
                android:text="@string/submit"
                android:layout_margin="5dp"
                android:radius="30dp"
                android:layout_weight="1"
                />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/sidebar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"/>

</androidx.drawerlayout.widget.DrawerLayout>